--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "config": "^3.3.11",
+    "debug": "^4.3.4",
     "express": "^4.19.1",
-    "joi": "^13.1.0"
+    "helmet": "^7.1.0",
+    "joi": "^13.1.0",
+    "morgan": "^1.10.0",
+    "pug": "^3.0.2"
   }
 }
